2011-01-19  Per Bothner  <per@bothner.com>

	* LispLanguage.java (makeBody): Remove method - now in Translator.
	(defSntxStFld): mangleNameIfNeeded is now in super-class.
	* LangPrimType.java: emitPushBoolean and emitCoerceToBoolean are
	now in Compilation, not Language.

2011-01-17  Per Bothner  <per@bothner.com>

	* LispLanguage.java (getCompilationClass): New method.
	(getCompilation, makeApply, checkDefaultBinding): Removed methods.

2011-01-03  Per Bothner  <per@bothner.com>

	Support square brackets for constructing immutable vectors.
	* BracketApply.java: New Syntax.  Currently handles 'type[]'.
	* Makefile.am: Update accordingly.
	* LangObjType.java (CONST_VECTOR_TYPE_CODE): New constant.
	(constVectorType): New static LangObjectType field.
	* ReadTable.java (defaultBracketMode): No default -2, which
	treats [x y z] as an immutable-sequence constructor.
	(setBracketMode): Handle new mode==-2
	* LispReader.java (handlePostfix): Handle 'exp[exps]'.

	* ReaderVector.java (readVector):  Return ConstVector rather than
	FVector, to produce immutable result.

	* ReaderTypespec.java (read): Update belatedly to use
	ReadTable#makeSymbol.

2010-12-27  Per Bothner  <per@bothner.com>

	* LangObjType.java (procedureType): New static field.
	(PROCEDURE_TYPE_CODE): New constant.
	(compare, coercionMethod, coercionOrNullMethod, coerceFromObject:
	Update accordingly.
	(coerceToProcedureOrNull, coerceToProcedure): New methods.

2010-11-26  Per Bothner  <per@bothner.com>

	* LispLanguage.java (parse): Move check for unexpected ')' inside loop.

	* LispPackage.java (lookup): Update, since Symbol constructor is
	now protected.

2010-11-14  Per Bothner  <per@bothner.com>

	* ReaderIgnoreRestOfLine.java (read): Unread line-ending.

2010-10-21  Per Bothner  <per@bothner.com>

	* LispReader.java (makePair): New overloaded method.

2010-10-15  Per Bothner  <per@bothner.com>

	* LangObjType.java (convertValue): Just return null for 'integer',